<resources>
    <string name="app_name" translatable="false">Classic Snake</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="start_game">START GAME</string>
    <string name="resumeMenu">CONTINUE</string>
    <string name="settings">SETTINGS</string>
    <string name="level">Level:</string>
    <string name="settingsTitle">SETTINGS</string>
    <string name="tab1" translatable="false">35x35</string>
    <string name="tab2" translatable="false">20x20</string>
    <string name="tamanho_do_tabuleiro">Grid size:</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="confirm">Confirm</string>

</resources>
