<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_purple"
    tools:context="com.example.quaresma.classicsnake.MainActivity"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_weight="0.47"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/start"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.05"
        android:background="@color/green"
        android:onClick="start"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/resume"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.05"
        android:background="@color/green"
        android:text="@string/resume" />

    <Button
        android:id="@+id/settings"
        android:onClick="config"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:background="@color/green"
        android:text="@string/settings" />


</LinearLayout>
